back to top button

--- a/css/nav.css
+++ b/css/nav.css
@@ -81,3 +81,24 @@ a:hover {
     transform: none !important;
   }
 }
+
+#myBtn {
+  display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background-color: #fbfbfb; 
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    font-size: 30px;
+    cursor: pointer;
+    color: #000000;
+    height: 50px;
+    width: 50px;
+    z-index: 1;
+}
+
+#myBtn:hover {
+  background-color: #649866;
+}
