--- a/css/login.css
+++ b/css/login.css
@@ -1,16 +1,16 @@
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
+.container-fluid{
+    display: flex;
+    justify-content: center;
+}
+
 html,body {
-    margin: 0;
     display: grid;
-    height: 100%;
     width: 100%;
-    place-items: center;
-    background: -webkit-linear-gradient(left, #003366, #004080, #0059b3, #0073e6);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(34, 125, 114, 1) 66%);
 }
 
 ::selection {
@@ -22,7 +22,8 @@ html,body {
     width: 30%;
     overflow: hidden;
     background: #fff;
-    padding: 30px;
+    padding: 40px;
+    margin: 2.75rem auto;
     border-radius: 15px;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
 }
@@ -188,6 +189,10 @@ form .btn {
     background: rgba(34,125,114,1);
 }
 
+.field.btn:hover{
+    background: rgb(14, 71, 64);
+}
+
 form .btn .btn-layer {
     height: 100%;
     width: 300%;
@@ -213,6 +218,12 @@ form .btn input[type="submit"] {
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
+}
+
+@media screen and (max-width: 1400px) {
+    .wrapper {
+        width: 40%;
+    }
 }
 
 @media screen and (max-width: 908px) {
