--- a/css/login.css
+++ b/css/login.css
@@ -2,12 +2,12 @@
     box-sizing: border-box;
 }
 
-.container-fluid{
+.container-fluid {
     display: flex;
     justify-content: center;
 }
 
-html,body {
+html, body {
     display: grid;
     width: 100%;
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(34, 125, 114, 1) 66%);
@@ -18,7 +18,7 @@ html,body {
     color: #fff;
 }
 
-.wrapper {
+#login-signup-wrapper {
     width: 30%;
     overflow: hidden;
     background: #fff;
@@ -28,12 +28,12 @@ html,body {
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
 }
 
-.wrapper .title-text {
+#login-signup-wrapper .title-text {
     display: flex;
     width: 200%;
 }
 
-.wrapper .title {
+#login-signup-wrapper .title {
     width: 50%;
     font-size: 30px;
     font-weight: 600;
@@ -41,7 +41,7 @@ html,body {
     transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.wrapper .slide-controls {
+#login-signup-wrapper .slide-controls {
     position: relative;
     display: flex;
     height: 50px;
@@ -82,34 +82,68 @@ html,body {
     transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-input[type="radio"] {
-    display: none;
+/* when login form is visible to user */
+#login-signup-wrapper.login-visible label.signup {
+    color: #000;
+}
+#login-signup-wrapper.login-visible label.login {
+    cursor: default;
+    user-select: none;
 }
 
-#signup:checked~.slider-tab {
+
+/* when signup form is visible to user */
+#login-signup-wrapper.signup-visible .slider-tab {
     left: 50%;
 }
-
-#signup:checked~label.signup {
+#login-signup-wrapper.signup-visible #login-form,
+#login-signup-wrapper.signup-visible .title.login {
+    margin-left: -50%;
+}
+#login-signup-wrapper.signup-visible label.signup{
     color: #fff;
     cursor: default;
     user-select: none;
 }
-
-#signup:checked~label.login {
+#login-signup-wrapper.signup-visible label.login {
     color: #000;
 }
 
-#login:checked~label.signup {
-    color: #000;
-}
+/* css nesting examples */
+/* #login-signup-wrapper {
+    &.login-visible {
+        & label.signup {
+            color: black;
+        }
 
-#login:checked~label.login {
-    cursor: default;
-    user-select: none;
-}
+        & label.login {
+            cursor: default;
+            user-select: none;
+        }
+    }
 
-.wrapper .form-container {
+    &.signup-visible {
+        & .slider-tab {
+            left: 50%;
+        }
+
+        & #login-form, & .title.login {
+            margin-left: -50%;
+        }
+
+        & label.signup {
+            color: #fff;
+            cursor: default;
+            user-select: none;
+        }
+
+        & label.login {
+            color: #000;
+        }
+    }
+} */
+
+#login-signup-wrapper .form-container {
     width: 100%;
     overflow: hidden;
 }
@@ -176,7 +210,7 @@ form .field input:focus::placeholder {
     text-decoration: underline;
 }
 
-form .btn {
+form .submit-btn {
     height: 50px;
     width: 100%;
     border-radius: 15px;
@@ -184,16 +218,16 @@ form .btn {
     overflow: hidden;
 }
 
-.field.btn{
+.submit-btn.btn{
     /* background: -webkit-linear-gradient(right, #003366, #004080, #0059b3, #0073e6); */
-    background: rgba(34,125,114,1);
+    background-color: rgba(34,125,114,1);
 }
 
-.field.btn:hover{
-    background: rgb(14, 71, 64);
+.submit-btn.btn:hover{
+    background-color: rgb(14, 71, 64);
 }
 
-form .btn .btn-layer {
+form .submit-btn .btn-layer {
     height: 100%;
     width: 300%;
     position: absolute;
@@ -201,11 +235,11 @@ form .btn .btn-layer {
     border-radius: 16px;
 }
 
-form .btn:hover .btn-layer {
+form .submit-btn:hover .btn-layer {
     left: 0;
 }
 
-form .btn input[type="submit"] {
+form .submit-btn input[type="submit"] {
     height: 100%;
     width: 100%;
     z-index: 1;
@@ -221,31 +255,31 @@ form .btn input[type="submit"] {
 }
 
 @media screen and (max-width: 1400px) {
-    .wrapper {
+    #login-signup-wrapper {
         width: 40%;
     }
 }
 
 @media screen and (max-width: 908px) {
-    .wrapper {
+    #login-signup-wrapper {
         width: 50%;
     }
 }
 
 @media screen and (max-width: 748px) {
-    .wrapper {
+    #login-signup-wrapper {
         width: 60%;
     }
 }
 
 @media screen and (max-width: 598px) {
-    .wrapper {
+    #login-signup-wrapper {
         width: 70%;
     }
 }
 
 @media screen and (max-width: 468px) {
-    .wrapper {
+    #login-signup-wrapper {
         width: 80%;
     }
 }
